@@ -23,6 +23,7 @@ Changelog for getTables.
 - Фильтр по умолчанию 0 для чекбокса.
 - Лог для json конфига.
 - Добавить пагинацию внизу таблицы.
+- Инструкция edit.type.content выгрузка в excel поля заданные контентом.
 
 1.11.3-alpha
 - Добавлено событие getTablesLoadGTSConfig для изменения gts-конфига, когда нельзя редактировать исходник.
